Fix alignment of links and text

--- a/style/site.css
+++ b/style/site.css
@@ -26,7 +26,7 @@ body {
     left: 0;
     top: 0;
     display: grid;
-    grid-template-areas: ". content ." ". content .";
+    grid-template-areas: ". content .";
 }
 
 .content {
@@ -63,6 +63,7 @@ body {
 .links {
     grid-area: content;
     align-self: start;
+    justify-self: start;
     font-family: Lazer84, Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: row-reverse;
@@ -74,6 +75,7 @@ body {
     text-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.1);
     text-decoration: none;
     padding: 1em;
+    font-size: 4vw;
 }
 
 .link:hover {
